[package]
name = "egui-id-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "^0.3.0"
three-d = { version = "^0.17.0", features = ["egui-gui"] }
env_logger = { version = "^0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
lens-rs = "^0.3.2"

[package.metadata.inwelling]
lens-rs_generator = true
