[package]
name = "egui-id-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "^0.3.0"
three-d = { version="^0.18.0", features=["egui-gui"] }
three-d-asset = "^0.7.0"
env_logger = { version = "^0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[package.metadata.inwelling]
lens-rs_generator = true

[patch.crates-io]
three-d = { git = "https://github.com/asny/three-d.git" } # Using repo directly for an up-to-date version of egui
